# Install-Codex-CLI-in-terminator

./: README.md
codex-deepseek/: pyproject.toml
codex-deepseek/codex_deepseek/: __init__.py  cli.py  config.py  proxy.py
codex-deepseek/examples/: config.toml
codex-deepseek/scripts/: install.sh
